tdf#116344: Don’t Kashida justify Syriac text

I’ve always suspected this check in VCL is wrong since Writer calculates
Kashida positions for Arabic only. If we *really* want to Kashida
justify Syriac, then Writer has to be first taught how to calculate
Kashida positions for it.

Change-Id: I20c03a3a54bce14c9bebb55426bd22537fe50d6a
Reviewed-on: https://gerrit.libreoffice.org/51223
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Khaled Hosny <khaledhosny@eglug.org>